<resources>
    //about app
    <string name="app_name">FM 2022</string>
    <string name="button_menu_name">Menu</string>
    <string name="loading_name">My_loading</string>
    <string name="home_name">My_home_page</string>
    <string name="button_exit_name">Exit</string>
    <string name="logo_name">Football</string>
    <string name="logo_second_name">Manager</string>
    //фрагмент player
    <string name="Main_name_player">Гравці</string>
    <string name="text_with_player">Команда</string>
    <string name="filter_position">Фільтр за позицією</string>
    <string name="more_information">Додаткова інформація</string>
    <string name="trener">Тренер</string>
    <string name="text_date">Дата народження</string>
    <string name="text_amplua">Позиція</string>
    //фрагмент navigation
    <string name="home">Головна</string>
    <string name="plan">Планування</string>
    <string name="transfer">Трансфери</string>
    <string name="match">Матчі</string>
    //фрагмент plan
    <string name="caption_plan">Планування схеми на гру</string>
    <string name="search_number">Пошук за номером</string>
    <string name="search_fio">Пошук за ПІБ</string>
    <string name="before">До</string>
    <string name="after">Від</string>
    <string name="search_fio_plan">ПІБ гравця</string>
    //фрагмент match
    <string name="caption_match">Результати проведених матчів</string>
    //фрагмент match
    <string name="caption_transfer">Трансферна активність</string>
    <string name="caption_transfer_player">Про трансфер</string>
    <string name="caption_transfer_search_date">Пошук за датою</string>
    <string name="caption_transfer_search_team">Пошук за командою</string>
    <string name="date">22.02.2022</string>
    <string name="caption_number_transfer"># трансферу -</string>
    <string name="end_contract">Кінець контракту -</string>
    <string name="begin_contract">Початок контракту -</string>
    <string name="caption_klub_transfer">Клуб</string>
    <string name="caption_trener_transfer">Тренер</string>
    <string name="caption_years_transfer">Вік</string>
    <string name="caption_termin_transfer">Термін</string>
    <string name="caption_price_transfer">Ціна</string>
    <string name="pibplayer">pibPlayer</string>
    <string name="pibnumber">pibNum</string>
    <string name="text_number_pib">Номер</string>
    <string name="temp_text_fio">Микола Шапаренко</string>
    <string name="temp_text_number">10</string>
    <string name="temp_text_date">1998-10-04</string>
    <string name="temp_text_amplua">АПЗ</string>
    <string name="temp_text_liga">Українська ліга</string>
    <string name="temp_text_fio_trener">Мірча Луческу</string>
    <string name="othertext">інші</string>
    <string name="numbertext">10-45</string>
    <string name="numbertext1">0-10</string>
    <string name="litertext">на В</string>
    <string name="litertext1">з М</string>
    <string name="posplayer">PosP</string>
    <string name="numpl">numPl</string>
    <string name="text_pib">ПІБ гравця</string>
    <string name="text_use_plan">Використовує -</string>
    <string name="team">team</string>
    <string name="text_klub1">Клуб 1</string>
    <string name="text_klub2">Клуб 2</string>
    <string name="text_date_match">Дата</string>
    <string name="text_plan">Схема</string>
    <string name="text_peredachi">П</string>
    <string name="text_result">Р</string>
    <string name="text_sezon">Сезон</string>
    <string name="text_ball">М</string>
    <string name="textViewklub1">klub1</string>
    <string name="textViewklub2">klub2</string>
    <string name="textViewdate">date</string>
    <string name="textViewplan">plan</string>
    <string name="textViewball">ball</string>
    <string name="textViewperedachi">per</string>
    <string name="textViewresult">rez</string>
    <string name="textViesezon">sezon</string>
    <string name="textCancel">Відмінити</string>
    <string name="textYes">Так</string>
    <string name="text_position">Позиція</string>
    <string name="text_num">#</string>
    <string name="text_with_H">з Н</string>
    <string name="caption_insert">Доповнення графіка результатів</string>
    <string name="editTextDate">Дата матчу</string>
    <string name="editTextgoals">Кількість голів</string>
    <string name="editTextgears">Кількість передач</string>
    <string name="editTextresult">Результат</string>
    <string name="caption_delete">Видалення</string>
    <string name="text_number_transfer">Номер трансферу</string>
    <string name="temp_text_date1">28.10.2022</string>
    <string name="temp_text_date2">28.10.2024</string>
    <string name="temp_text_klub">ФК Динамо</string>
    <string name="temp_text_price">36</string>
    <string name="temp_text_termin">24</string>
    <string name="temp_text_years_player">23</string>
    <string name="RadioButtonTransfer2">2022</string>
    <string name="RadioButtonTransfer1">2021</string>
    <string name="RadioButtonTransfer4">2025</string>
    <string name="RadioButtonTransfer3">2024</string>
    <string name="caption_insertTransfer">Додавання трансфера</string>
    <string name="editTextDate2">Кінець контракту</string>
    <string name="editTextDate1">Початок контракту</string>
    <string name="editTextTerm">Термін контракту</string>
    <string name="editTextPrice">Ціна контракту</string>
    <string name="caption_daleteTransfer">Видалення трансфера</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="editTextLogin">Логін</string>
    <string name="caption_Login">Вхід в Football Manager</string>
    <string name="editTextPassword">Пароль</string>
    <string name="name_user">User</string>
    <string name="Text_user">Привіт,</string>
</resources>