<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewklub1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewklub1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewklub2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewklub2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewdate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewdate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewplan"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/textViewplan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewball"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textViewball"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewperedachi"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textViewperedachi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewresult"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textViewresult"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewsezon"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textViesezon"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold" />

</LinearLayout>