<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MatchFragment" >

    <ImageView
        android:id="@+id/bacground_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/for_bacground_home_loading"
        android:contentDescription="@string/home_name"
        android:src="@drawable/bacground_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/caption_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:clickable="true"
            android:contentDescription="@string/home_name"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/caption_match"
            android:textAlignment="center"
            android:textColor="@color/for_player"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/blok_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/home_name"
            android:src="@drawable/frame29" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/table_match"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_klub1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="15dp"
                android:text="@string/text_klub1"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_klub2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_klub2"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_date_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:clickable="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_date_match"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_plan"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:clickable="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_ball"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/text_peredachi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_peredachi"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_result"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_sezon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/text_sezon"
                android:textAlignment="center"
                android:textColor="@color/text_player"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <ListView
            android:id="@+id/tableMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ListView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_match"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="275dp"
        android:src="@drawable/notimage"
        android:contentDescription="@string/home_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_save_match"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="580dp"
            android:clickable="true"
            android:contentDescription="@string/home_name"
            android:minHeight="48dp"
            android:src="@drawable/save_match"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/btn_add_match"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="585dp"
            android:visibility="invisible"
            android:clickable="true"
            android:contentDescription="@string/home_name"
            android:src="@drawable/add_match"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/home_name"
            android:fontFamily="@font/montserrat"
            android:text="@string/logo_name"
            android:textAlignment="center"
            android:textColor="@color/for_player"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:background="@color/for_player"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/logo_second_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>